--- a/index.html
+++ b/index.html
@@ -1,12 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Mesto</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
 
-<script src="js/app.js"></script>
+<body class="page">
+  <header class="header">
+    <a href="#" class="logo"></a>
+  </header>
+  <main>
+    <div class="profile">
+      <img src="./images/avatar.png" alt="Аватар" class="profile__avatar">
+      <div class="profile__info">
+        <div class="profile__row">
+          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <button class="profile__edit-btn"></button>
+        </div>
+
+        <p class="profile__subtitle">Исследователь океана</p>
+      </div>
+      <button class="add-btn"></button>
+    </div>
+    <ul class="elements">
+      <li class="element">
+        <img src="./images/img-1.png" alt="Карачаевск" class="element__img">
+        <div class="element__row">
+          <h2 class="element__name">Карачаевск</h2>
+          <div class="element__approve"></div>
+        </div>
+      </li>
+      <li class="element">
+        <img src="./images/img-2.png" alt="Гора Эльбрус" class="element__img">
+        <div class="element__row">
+          <h2 class="element__name">Гора Эльбрус</h2>
+          <div class="element__approve"></div>
+        </div>
+      </li>
+      <li class="element">
+        <img src="./images/img-3.png" alt="Домбай" class="element__img">
+        <div class="element__row">
+          <h2 class="element__name">Домбай</h2>
+          <div class="element__approve"></div>
+        </div>
+      </li>
+      <li class="element">
+        <img src="./images/img-4.png" alt="Гора Эльбрус" class="element__img">
+        <div class="element__row">
+          <h2 class="element__name">Гора Эльбрус</h2>
+          <div class="element__approve"></div>
+        </div>
+      </li>
+      <li class="element">
+        <img src="./images/img-5.png" alt="Домбай" class="element__img">
+        <div class="element__row">
+          <h2 class="element__name">Домбай</h2>
+          <div class="element__approve"></div>
+        </div>
+      </li>
+      <li class="element">
+        <img src="./images/img-6.png" alt="Карачаево-Черкесия" class="element__img">
+        <div class="element__row">
+          <h2 class="element__name">Карачаево-Черкесия</h2>
+          <div class="element__approve"></div>
+        </div>
+      </li>
+    </ul>
+  </main>
+  <footer class="footer">&#169; 2020 Mesto Russia</footer>
+  <div class="popup">
+    <div class="popup__container">
+      <form action="#" class="form">
+        <div class="form__title">Редактировать профиль</div>
+        <input type="text" class="form__input" name="name" value="111111111"></input>
+        <input type="text" class="form__input" name="job" value="222222222"></input>
+        <button type="submit" class="form__btn">Сохранить</button>
+      </form>
+      <div class="popup__close"></div>
+    </div>
+  </div>
+  <script src="js/app.js"></script>
 </body>
+
 </html>
