--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <div class="popup__container">
       <form action="#" class="form">
         <div class="form__title">Редактировать профиль</div>
-        <input type="text" class="form__input" name="name" value="111111111"></input>
-        <input type="text" class="form__input" name="job" value="222222222"></input>
+        <input type="text" class="form__input" name="name" value="111111111">
+        <input type="text" class="form__input" name="job" value="222222222">
         <button type="submit" class="form__btn">Сохранить</button>
       </form>
       <div class="popup__close"></div>
