fix: исправление ошибок

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
   </footer>
   <div class="popup">
     <div class="popup__container">
+      <h3 class="popup__title">Редактировать профиль</h3>
       <form action="#" class="form" name="edit">
-        <h3 class="form__title">Редактировать профиль</h3>
         <input type="text" class="form__input" name="name" value="Жак-Ив Кусто">
         <input type="text" class="form__input" name="job" value="Исследователь океана">
         <button type="submit" class="form__btn">Сохранить</button>
