--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
       <button type="button" class="popup__close"></button>
     </div>
   </div>
-  
+
   <div class="popup popup_type_place">
     <div class="popup__container">
       <h3 class="popup__title">Новое место</h3>
       <form action="#" class="form" name="edit-place">
         <input type="text" class="form__input" name="name" placeholder="Название" value="">
-        <input type="text" class="form__input" name="url"  placeholder="Ссылка на картинку" value="">
+        <input type="text" class="form__input" name="url" placeholder="Ссылка на картинку" value="">
         <button type="submit" class="form__btn">Создать</button>
       </form>
       <button type="button" class="popup__close"></button>
@@ -61,16 +61,16 @@
   </div>
 
   <div class="popup popup_type_img">
-        <figure class="popup__container-img">
-        <img class="popup__img" src="" alt="" />
-        <figcaption class="popup__caption"></figcaption>
-        <button type="button" class="popup__close"></button>
-      </figure>
+    <figure class="popup__container-img">
+      <img class="popup__img" src="#" alt="#" />
+      <figcaption class="popup__caption"></figcaption>
+      <button type="button" class="popup__close"></button>
+    </figure>
   </div>
 
   <template id="card">
     <li class="element">
-      <img src="" alt="" class="element__img">
+      <img src="#" alt="#" class="element__img">
       <button type="button" class="element__btn-trash"></button>
       <div class="element__row">
         <h2 class="element__name"></h2>
@@ -78,7 +78,7 @@
       </div>
     </li>
   </template>
-  
+
   <script type="module" src="scripts/app.js"></script>
 </body>
 
