--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
   <div class="popup popup_type_profile">
     <div class="popup__container">
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form action="#" class="form" name="edit-profile">
-        <input type="text" class="form__input" name="name" value="Жак-Ив Кусто">
-        <input type="text" class="form__input" name="job" value="Исследователь океана">
+      <form action="#" class="form" name="profile-form">
+        <input type="text" class="form__input" name="name" value="">
+        <input type="text" class="form__input" name="job" value="">
         <button type="submit" class="form__btn">Сохранить</button>
       </form>
       <button type="button" class="popup__close"></button>
@@ -51,7 +51,7 @@
   <div class="popup popup_type_place">
     <div class="popup__container">
       <h3 class="popup__title">Новое место</h3>
-      <form action="#" class="form" name="edit-place">
+      <form action="#" class="form" name="card-form">
         <input type="text" class="form__input" name="name" placeholder="Название" value="">
         <input type="text" class="form__input" name="url" placeholder="Ссылка на картинку" value="">
         <button type="submit" class="form__btn">Создать</button>
