--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
   <div class="popup popup_type_profile">
     <div class="popup__container">
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form action="#" class="form" name="profile-form">
-        <input type="text" class="form__input" name="name" value="">
-        <input type="text" class="form__input" name="job" value="">
+      <form action="#" class="form" name="profile-form" novalidate>
+        <input id="name-input" type="text" class="form__input" name="name" value="" minlength="2" maxlength="40" required>
+        <span class="name-input-error form__input-error">Error</span>
+        <input id="job-input" type="text" class="form__input" name="job" value="" minlength="2" maxlength="200" required>
+        <span class="job-input-error form__input-error">Error</span>
         <button type="submit" class="form__btn">Сохранить</button>
       </form>
       <button type="button" class="popup__close"></button>
@@ -51,9 +53,12 @@
   <div class="popup popup_type_place">
     <div class="popup__container">
       <h3 class="popup__title">Новое место</h3>
-      <form action="#" class="form" name="card-form">
-        <input type="text" class="form__input" name="name" placeholder="Название" value="">
-        <input type="text" class="form__input" name="url" placeholder="Ссылка на картинку" value="">
+      <form action="#" class="form" name="card-form" novalidate>
+        <input id="title-input" type="text" class="form__input" name="name" placeholder="Название" value="" minlength="2" maxlength="30"required>
+        <span class="title-input-error form__input-error">Error</span>
+        <input id="url-input" type="url" class="form__input" name="url" placeholder="Ссылка на картинку" value=""
+          required>
+        <span class="url-input-error form__input-error">Error</span>
         <button type="submit" class="form__btn">Создать</button>
       </form>
       <button type="button" class="popup__close"></button>
@@ -79,7 +84,8 @@
     </li>
   </template>
 
-  <script type="module" src="scripts/app.js"></script>
+  <script type="module" src="scripts/index.js"></script>
+  <script type="module" src="scripts/validate.js"></script>
 </body>
 
 </html>
