fix: fix errors

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <input id="url-input" type="url" class="form__input" name="url" placeholder="Ссылка на картинку" value=""
           required>
         <span class="url-input-error form__input-error">Error</span>
-        <button type="submit" class="form__btn">Создать</button>
+        <button type="submit" class="form__btn"  name="create">Создать</button>
       </form>
       <button type="button" class="popup__close"></button>
     </div>
