--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
-  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body class="page">
@@ -17,7 +15,7 @@
   <main>
     <section>
       <div class="profile">
-        <img src="./images/avatar.png" alt="Аватар" class="profile__avatar">
+        <img src="<%=require('./images/avatar.png')%>" alt="Аватар" class="profile__avatar">
         <div class="profile__info">
           <div class="profile__row">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -84,7 +82,6 @@
     </li>
   </template>
 
-  <script type="module" src="scripts/index.js"></script>
 </body>
 
 </html>
