--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,15 @@
   <main>
     <section>
       <div class="profile">
-        <img src="<%=require('./images/avatar.png')%>" alt="Аватар" class="profile__avatar">
+        <button type='button' class="profile__avatar-edit">
+          <img src="" alt="Аватар" class="profile__avatar">
+        </button>
         <div class="profile__info">
           <div class="profile__row">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <h1 class="profile__title"></h1>
             <button class="profile__edit-btn" type="button"></button>
           </div>
-          <p class="profile__subtitle">Исследователь океана</p>
+          <p class="profile__subtitle"></p>
         </div>
         <button class="add-btn" type="button"></button>
       </div>
@@ -38,9 +40,11 @@
     <div class="popup__container">
       <h3 class="popup__title">Редактировать профиль</h3>
       <form action="#" class="form" name="profile-form" novalidate>
-        <input id="name-input" type="text" class="form__input" name="name" value="" minlength="2" maxlength="40" required>
+        <input id="name-input" type="text" class="form__input" name="name" value="" minlength="2" maxlength="40"
+          required>
         <span class="name-input-error form__input-error">Error</span>
-        <input id="job-input" type="text" class="form__input" name="job" value="" minlength="2" maxlength="200" required>
+        <input id="job-input" type="text" class="form__input" name="job" value="" minlength="2" maxlength="200"
+          required>
         <span class="job-input-error form__input-error">Error</span>
         <button type="submit" class="form__btn">Сохранить</button>
       </form>
@@ -52,12 +56,36 @@
     <div class="popup__container">
       <h3 class="popup__title">Новое место</h3>
       <form action="#" class="form" name="card-form" novalidate>
-        <input id="title-input" type="text" class="form__input" name="name" placeholder="Название" value="" minlength="2" maxlength="30"required>
+        <input id="title-input" type="text" class="form__input" name="name" placeholder="Название" value=""
+          minlength="2" maxlength="30" required>
         <span class="title-input-error form__input-error">Error</span>
         <input id="url-input" type="url" class="form__input" name="url" placeholder="Ссылка на картинку" value=""
           required>
         <span class="url-input-error form__input-error">Error</span>
-        <button type="submit" class="form__btn"  name="create">Создать</button>
+        <button type="submit" class="form__btn" name="create">Создать</button>
+      </form>
+      <button type="button" class="popup__close"></button>
+    </div>
+  </div>
+
+  <div class="popup popup_type_avatar">
+    <div class="popup__container">
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form action="#" class="form" name="avatar-form" novalidate>
+        <input id="url-avatar-input" type="url" class="form__input" name="url" placeholder="Ссылка на картинку" value=""
+          required>
+        <span class="url-avatar-input-error form__input-error">Error</span>
+        <button type="submit" class="form__btn" name="save">Сохранить</button>
+      </form>
+      <button type="button" class="popup__close"></button>
+    </div>
+  </div>
+
+  <div class="popup popup_type_question">
+    <div class="popup__container">
+      <h3 class="popup__title">Вы уверены?</h3>
+      <form action="#" class="form form_question" name="question-form" novalidate>
+        <button type="submit" class="form__btn form__btn_question" name="answer">Да</button>
       </form>
       <button type="button" class="popup__close"></button>
     </div>
@@ -77,7 +105,10 @@
       <button type="button" class="element__btn-trash"></button>
       <div class="element__row">
         <h2 class="element__name"></h2>
-        <button type="button" class="element__btn-like"></button>
+        <div class="element__btn-warp">
+          <button type="button" class="element__btn-like"></button>
+          <span class="element__counter-like">0</span>
+        </div>
       </div>
     </li>
   </template>
