--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <section>
       <div class="profile">
         <button type='button' class="profile__avatar-edit">
-          <img src="" alt="Аватар" class="profile__avatar">
+          <img src="<%=require('./images/cap.jpg')%>" alt="Аватар" class="profile__avatar">
         </button>
         <div class="profile__info">
           <div class="profile__row">
